# K8s_Agent

./: README.md  kubernetes_log_analysis_report.md  pyproject.toml  readme.md  report.md  test_azure_setup.py
src/helm/: crew.py  main.py
src/helm/config/: agents.yaml  tasks.yaml
trivy_reports/: comprehensive_security_report.md
trivy_reports/license/: license_compliance_analysis.json  license_compliance_report_2025-08-14.md
trivy_reports/misconfig/: misconfiguration_analysis.json  misconfigurations_report_2025-08-14.md
trivy_reports/secret/: secret_analysis.json  secrets_report_2025-08-14.md
trivy_reports/summary/: Comprehensive_Security_Report_2025-08-14.md  security_assessment_main_2025-08-14.md
trivy_reports/vuln/: vulnerabilities_report_2025-08-14.md  vulnerability_analysis.json  vulnerability_analysis_eatherv
