[project]
name = "helm"
version = "0.1.0"
description = "helm using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
helm = "helm.main:run"
run_crew = "helm.main:run"
train = "helm.main:train"
replay = "helm.main:replay"
test = "helm.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
